# Bible-Verses-Bot

./: .gitignore  Dockerfile  README.md  bible_books.py  bible_versions.py  changes.txt  database_wrapper.py  firebase_wrapper.py  keep_alive.py  main.py  message_match.py  next_step_handler.py  pyproject.toml  regexes.py  render.yaml  request_sess.py  setup.py  utils.py  verse_match.pyx
.github/workflows/: mirror_to_codeberg.yaml
