[tool.poetry]
name = "bible-verses-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
Flask = "^3.0.0"
httpx = "^0.27.0"
lxml = "^5.2.1"
pyTelegramBotAPI = "^4.14.1"
firebase-admin = "^6.3.0"
Cython = "^3.0.7"
waitress = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "Cython"]
build-backend = "poetry.core.masonry.api"
