[project]
authors = [
    { name = "Hankertrix", email = "91734413+hankertrix@users.noreply.github.com" },
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "beautifulsoup4<5.0.0,>=4.12.2",
    "Flask<4.0.0,>=3.0.0",
    "httpx<1.0.0,>=0.27.0",
    "lxml<6.0.0,>=5.2.1",
    "pyTelegramBotAPI<5.0.0,>=4.14.1",
    "firebase-admin<7.0.0,>=6.3.0",
    "Cython<4.0.0,>=3.0.7",
    "waitress<4.0.0,>=3.0.0",
    "setuptools>=75.6.0",
    "charset-normalizer>=3.4.0",
]
name = "bible-verses-bot"
version = "0.1.0"
description = ""

[tool.setuptools]
py-modules = []

[tool.pdm.build]
includes = []

[tool.poetry]
name = "bible-verses-bot"
version = "0.1.0"
description = ""
authors = ["Hankertrix <91734413+hankertrix@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
Flask = "^3.0.0"
httpx = "^0.27.0"
lxml = "^5.2.1"
pyTelegramBotAPI = "^4.14.1"
firebase-admin = "^6.3.0"
Cython = "^3.0.7"
waitress = "^3.0.0"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
