[project]
authors = [
    { name = "Hankertrix", email = "91734413+hankertrix@users.noreply.github.com" },
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "beautifulsoup4<5.0.0,>=4.12.2",
    "httpx<1.0.0,>=0.27.0",
    "lxml<6.0.0,>=5.2.1",
    "pyTelegramBotAPI<5.0.0,>=4.14.1",
    "firebase-admin<7.0.0,>=6.3.0",
    "Cython<4.0.0,>=3.0.7",
    "setuptools>=80.8.0",
    "charset-normalizer>=3.4.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]
name = "bible-verses-bot"
version = "0.1.0"
description = "A bot that gives you the full bible verse from a verse reference."

[tool.setuptools]
py-modules = []

[tool.pdm.build]
includes = []

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.poetry]
name = "bible-verses-bot"
version = "0.1.0"
description = ""
authors = ["Hankertrix <91734413+hankertrix@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
Flask = "^3.0.0"
httpx = "^0.27.0"
lxml = "^5.2.1"
pyTelegramBotAPI = "^4.14.1"
firebase-admin = "^6.3.0"
Cython = "^3.0.7"
waitress = "^3.0.0"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
